<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/hnav_home" />

        <item
            android:id="@+id/manageMicroAcademyFragment"
            android:icon="@drawable/ic_academy"
            android:title="@string/hnav_microacademy" />

        <item
            android:id="@+id/achievementsFragment"
            android:icon="@drawable/ic_achievements"
            android:title="@string/hnav_achievements" />

        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/hnav_profile" />

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/hnav_settings" />

        <item
            android:id="@+id/updateServiceStatusFragment"
            android:icon="@drawable/ic_trackservice"
            android:title="@string/hnav_update_service_status" />

        <item
            android:id="@+id/navigation_package"
            android:icon="@drawable/ic_servicepackage"
            android:title="@string/hnav_add_service_package" />

    </group>
</menu>