<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report"
    android:background="#F8F8F8"
    android:padding="15dp">

    <!-- Use a vertical LinearLayout inside FrameLayout to maintain flow -->
    <LinearLayout
        android:background="#F0F0F0"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Screen Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/palanquin_dark_bold"
            android:text="@string/report_hustler_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <!-- Hustler Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_hustler_name"
            android:fontFamily="@font/palanquin_bold"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext"
            android:layout_height="50dp"
            android:padding="5dp"
            android:layout_width="match_parent" />

        <!-- Category Selection -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:fontFamily="@font/palanquin_bold"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Comment Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_comment_optional"
            android:fontFamily="@font/palanquin_bold"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editComment"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/edittext" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/theme_purple"
            android:fontFamily="@font/palanquin_dark_bold"
            android:gravity="center_horizontal"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="15dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />
    </LinearLayout>

</FrameLayout>

